--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -86,7 +86,7 @@ jobs:
 
   test-cygwin:
     name: "cygwin / GAP master"
-    runs-on: windows-latest
+    runs-on: windows-2019
     if: ${{ !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository) }}
     env:
       CHERE_INVOKING: 1
