ci: add GAP stable-4.12 to matrix

--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -24,6 +24,7 @@ jobs:
         gap-branch:
           - master
           - stable-4.11
+          - stable-4.12
         pkgs-to-clone:
           - NautyTracesInterface
         ABI: ['']
