Rewrite buildsystem to use Makefile.gappkg
This should remove the problems on OpenBSD, and speed up build times.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
-*.DS_Store
-*.Plo
-*.Tpo
+.ipynb_checkpoints
+*.a
 *.aux
 *.bbl
 *.blg
 *.brf
 *.digraphs
+*.DS_Store
+*.dylib
 *.g6
 *.gcda
 *.gcno
@@ -22,58 +23,38 @@
 *.o
 *.out
 *.pdf
+*.Plo
 *.pnr
 *.pyc
 *.six
 *.status
 *.sub
+*.swo
 *.swp
 *.synctex.gz
 *.tex
 *.toc
 *.top
+*.Tpo
 *.tui
 *.txt
-.dirstamp
-.libs/*
-Makefile
-Makefile.in
+/doc/*.css
+/doc/*.js
 aclocal.m4
 autom4te.*
-bin/*
-cnf/*
+bin/
+bliss
+compile
 configure
+coverage
+depcomp
 digraphs-config.h
 digraphs-lib
+gen/
 gh-pages/
-libtool
-ltmain.sh
-m4/*
-planarity
-src/.deps/*
-src/.libs/*
-src/_pkgconfig.h
-extern/edge-addition-planarity-suite-Version_*/.libs
-extern/edge-addition-planarity-suite-Version_*/c/.deps
-extern/edge-addition-planarity-suite-Version_*/m4
-src/stamp-h1
-tags
-tst/out/*
-data/digraphs-lib-0.5
-gh-pages/
+Makefile
 manual.lab
-ltmain.sh
-.libs/**/Info.plist
-digraphs-config.h
-compile
-depcomp
-install-sh
 missing
-*.swo
-coverage
-.ipynb_checkpoints
-bliss
-*.a
-*.dylib
-/doc/*.js
-/doc/*.css
+src/pkgconfig.h.in
+tags
+tst/out/
