--- a/src/CPPLINT.cfg
+++ b/src/CPPLINT.cfg
@@ -2,4 +2,4 @@ set noparent
 filter=-build/include_subdir,-runtime/indentation_namespace,-runtime/references, -readability/casting,-runtime/threadsafe_fn,-runtime/int,-readability/todo
 linelength=80
 root=../..
-exclude_files=(_pkgconfig.h|digraphs-config.h)
+exclude_files=(pkgconfig.h|digraphs-config.h)
