--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,9 @@
 pr:
-- master
+- main
 - stable-*.*
 
 trigger:
-- master
+- main
 - stable-*.*
 
 pool:
@@ -71,7 +71,7 @@ jobs:
     displayName: 'Running the Digraphs package for GAP tests in docker container. . .'
 - job: coverage
   variables:
-    SUITE: coverage 
+    SUITE: coverage
     ABI: 64
     GAP_VERSION: 4.11.0
     PACKAGES: latest
