--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,6 +3,9 @@ on:
   workflow_dispatch:
   pull_request:
   push:
+    branches:
+      - main
+      - stable-*.*
   schedule:
     # Every day at 3:30 AM UTC
     - cron: '30 3 * * *'
@@ -11,8 +14,6 @@ jobs:
   lint:
     name: "${{ matrix.linter }}"
     runs-on: ubuntu-latest
-    # Don't run this twice for PRs from branches in the same repository
-    if: ${{ !(github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository) }}
     strategy:
       fail-fast: false
       matrix:
