ci: add cloning of graphviz to ci

--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -28,6 +28,7 @@ jobs:
           - stable-4.12
         pkgs-to-clone:
           - NautyTracesInterface
+          - mpan322/graphviz
         ABI: ['']
 
         include:
