--- a/.github/workflows/gap.yml
+++ b/.github/workflows/gap.yml
@@ -12,6 +12,7 @@ on:
 
 env:
   DIGRAPHS_LIB: digraphs-lib-0.6
+  VALGRIND: valgrind --trace-children=yes --leak-check=full --error-exitcode=1
 
 jobs:
   test-unix:
@@ -141,3 +142,45 @@ jobs:
           CONFIGFLAGS: --with-external-planarity --with-external-bliss
       - name: "Run Digraphs package's tst/teststandard.g"
         uses: gap-actions/run-pkg-tests@v2
+
+  test-valgrind:
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: actions/checkout@v4
+      - name: "Install Valgrind"
+        run: sudo apt-get install valgrind
+      - name: "Install GAP and clone/compile necessary packages"
+        uses: gap-actions/setup-gap@v2
+        with:
+          GAP_PKGS_TO_CLONE: "${{ inputs.pkgs-to-clone }}"
+          GAP_PKGS_TO_BUILD: "io orb profiling grape NautyTracesInterface datastructures"
+          GAPBRANCH: ${{ inputs.gap-branch }}
+          ABI: ${{ inputs.ABI }}
+          CONFIGFLAGS: "--enable-valgrind"
+      - name: "Build Digraphs"
+        uses: gap-actions/build-pkg@v1
+        with:
+          ABI: ${{ inputs.ABI }}
+      - name: "Clone datastructures v0.3.0"
+        run: |
+          if [ ! -d $HOME/gap/pkg/datastructures ]; then
+            cd $HOME/gap/pkg/
+            git clone https://github.com/gap-packages/datastructures.git datastructures
+            cd datastructures
+            git checkout v0.3.0
+            ./configure
+            make
+          fi
+      - name: "Run DigraphsTestInstall"
+        uses: ./.github/actions/test_with_valgrind
+        with:
+          GAP_TESTFILE: "tst/github_actions/install.g"
+          NO_COVERAGE: 'true'
+          pre-gap: ${{ env.VALGRIND }}
+      - name: "Run DigraphsTestStandard"
+        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added  
+        uses: ./.github/actions/test_with_valgrind
+        with:
+          GAP_TESTFILE: "tst/github_actions/standard.g"
+          NO_COVERAGE: 'true' 
+          pre-gap: ${{ env.VALGRIND }}
