--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,4 @@
-name: "Core"
+name: "Ubuntu"
 on:
     workflow_dispatch:
     pull_request:
@@ -12,6 +12,8 @@ on:
 
 env:
     DIGRAPHS_LIB: digraphs-lib-0.6
+    VALGRIND: valgrind --trace-children=yes --leak-check=full --error-exitcode=1
+
 
 jobs:
     test-unix:
@@ -85,4 +87,35 @@ jobs:
                 NO_COVERAGE: true
                 GAP_TESTFILE: "tst/github_actions/extreme.g"
                 only-needed: ${{ matrix.only-needed }}
+
+    test-valgrind:
+      name: "Ubuntu / GAP stable-4.13 / valgrind"
+      runs-on: "ubuntu-latest"
+      steps:
+      - uses: actions/checkout@v4
+      - name: "Install Valgrind"
+        run: sudo apt-get install valgrind
+      - name: "Install GAP and clone/compile necessary packages"
+        uses: gap-actions/setup-gap@v2
+        with:
+          GAP_PKGS_TO_CLONE: "NautyTracesInterface"
+          GAP_PKGS_TO_BUILD: "io orb datastructures grape NautyTracesInterface"
+          GAPBRANCH: "stable-4.13"
+          CONFIGFLAGS: "--enable-valgrind"
+      - name: "Build Digraphs"
+        uses: gap-actions/build-pkg@v1
+      - name: "Run DigraphsTestInstall"
+        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
+        uses: ./.github/actions/test_with_valgrind
+        with:
+          GAP_TESTFILE: "tst/github_actions/install.g"
+          NO_COVERAGE: 'true'
+          pre-gap: ${{ env.VALGRIND }}
+      - name: "Run DigraphsTestStandard"
+        # TODO: Replace below with gap-actions/run-pkg-tests@v2 if the functionality gets added
+        uses: ./.github/actions/test_with_valgrind
+        with:
+          GAP_TESTFILE: "tst/github_actions/standard.g"
+          NO_COVERAGE: 'true'
+          pre-gap: ${{ env.VALGRIND }}
                 
