--- a/.github/workflows/config_options.yml
+++ b/.github/workflows/config_options.yml
@@ -9,6 +9,8 @@ on:
   schedule:
     # Every day at 3:30 AM UTC
     - cron: "30 3 * * *"
+  env:
+    NO_COVERAGE: true
 
 jobs:
   with-external-planarity-bliss:
