--- a/.github/workflows/valgrind.yml
+++ b/.github/workflows/valgrind.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: "ubuntu-latest"
     steps:
       - uses: actions/checkout@v4
+      - name: Output g++ version
+        run: g++ --version
       - name: "Install Valgrind"
         run: sudo apt-get install valgrind
       - name: "Install GAP and clone/compile necessary packages"
