--- a/.github/workflows/os.yml
+++ b/.github/workflows/os.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Output g++ version
         run: g++ --version
-      - name: "Install dependencies"
+      - name: "Install macOS dependencies"
         if: ${{ runner.os == 'macOS' }}
         run: brew install automake
       - name: "Install GAP and clone/compile necessary packages"
