--- a/.github/workflows/config_options.yml
+++ b/.github/workflows/config_options.yml
@@ -51,6 +51,7 @@ jobs:
         uses: gap-actions/setup-gap@v2
         with:
           # TODO: Should this have NautyTracesInterface included? Or is that the point of this test?
+          GAP_PKGS_TO_CLONE: "digraphs/graphviz"
           GAP_PKGS_TO_BUILD: "io orb profiling grape datastructures"
           GAPBRANCH: stable-4.13
       - name: "Build Digraphs"
@@ -89,7 +90,7 @@ jobs:
       - name: "Install GAP and clone/compile necessary packages"
         uses: gap-actions/setup-gap@v2
         with:
-          GAP_PKGS_TO_CLONE: "NautyTracesInterface"
+          GAP_PKGS_TO_CLONE: "NautyTracesInterface digraphs/graphviz"
           GAP_PKGS_TO_BUILD: "io orb profiling grape datastructures NautyTracesInterface"
           GAPBRANCH: stable-4.13
       - name: "Build Digraphs"
