--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -32,15 +32,15 @@ jobs:
           - false
         include:
           - only-needed: true
-            pkgs-to-clone: ""
+            pkgs-to-clone: "digraphs/graphviz"
             pkgs-to-build: io orb datastructures
           - only-needed: false
-            pkgs-to-clone: NautyTracesInterface
+            pkgs-to-clone: NautyTracesInterface digraphs/graphviz
             pkgs-to-build: io orb datastructures grape NautyTracesInterface
             # NautyTracesInterface requires GAP >= 4.11
           - gap-branch: stable-4.10
             only-needed: false
-            pkgs-to-clone: ""
+            pkgs-to-clone: "digraphs/graphviz"
             pkgs-to-build: io orb grape datastructures
 
     steps:
